Only original author can change editors list
Still need to record original author and make sure
that the author field of the Page objects cannot be
overwritten by clients.

--- pt-br ----------

Somente o autor original pode modificar a lista de editores

Ainda preciso gravar o autor original na base e garantir
que o atributo autor dos objetos Page nao podem ser
re-escritos pelos usuarios.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@315 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -1,8 +1,11 @@
 <% @destination = { :name => 'page', :attr => 'text' } %>
-<label for='txtAuthorized'>
-  <%= 'Who should be able to edit this page?'.t -%>
-  <%= '(Usernames separated by spaces. Blank for everyone)'.t -%>
-</label><br />
-<%= text_field('page', 'editors', :id => 'txtAuthorized',
-                                  :class => 'text') %>
+<% if original_author_is_editing %>
+  <label for='txtAuthorized'>
+    <%= 'Who should be able to edit this page?'.t -%>
+    <%= '(Usernames separated by spaces. Blank for everyone)'.t -%>
+  </label><br />
+  <%= text_field('page', 'editors', :id => 'txtAuthorized',
+                                    :class => 'text') %>
+<% end %>
 <%= hidden_field_tag 'page_name', @page.name %>
+                                  
