Now recording the original author
Also created the `current_user' method and did some
refactoring

--- pt-br ---------------------

Agora gravando o autor original

Também foi criado o método `current_user' e feito uma
pequena reestruturacao.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@316 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/layouts/_header.rhtml
+++ b/app/views/layouts/_header.rhtml
@@ -3,7 +3,7 @@
   | <%= link_to 'Português', params.merge(:locale => 'pt-BR'), { :id => 'pt-BR' } -%>
 </div>
 <div>
-  <% if @session[:user].nil? then %>
+  <% if current_user.nil? then %>
       <%= start_form_tag :controller => 'account', :action=> 'login' %>
         <table>
           <tr>
