--- a/app/views/events/_toolbar.rhtml
+++ b/app/views/events/_toolbar.rhtml
@@ -1,7 +1,7 @@
-<% if @session[:user] then %>
+<% if current_user.nil? then %>
+  <span class='disabled'><%= 'Add'.t -%></span>
+<% else %>
   <%= link_to( 'Add'.t,
                :controller => 'events',
                :action => 'new') -%>
-<% else %>
-  <span class='disabled'><%= 'Add'.t -%></span>
 <% end %>
