Protected against unauthorized changes on editors list
--- pt-br --------------

Protecao contra mudancas nao autorizadas aa lista de editores

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@318 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -1,5 +1,5 @@
 <% @destination = { :name => 'page', :attr => 'text' } %>
-<% if original_author_is_editing %>
+<% if current_user.can_change_editors?(@page) %>
   <label for='txtAuthorized'>
     <%= 'Who should be able to edit this page?'.t -%>
     <%= '(Usernames separated by spaces. Blank for everyone)'.t -%>
