Pure wiki pages now looking better
--- pt-br -----------------

Paginas wiki puras mais ajeitadinhas

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@322 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -4,6 +4,7 @@
           <%= render_component(:controller => 'wiki',
                                :action =>  'show',
                                :params => { :page_name => 'MainPage',
+                                            :context => 'partial',
                                             :locale => @locale }) %>
         </div>
       </div>
