Started adding the planned features channel
--- pt-br --------------------

Iniciado o canal de funcionalidades planejadas


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@323 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -16,4 +16,18 @@
                                         :locale => @locale }) %>
     </div>
   <% end %>
+  <div class="channel" id="nextrelease">
+    <div class='channel-title'>
+      <p><%= 'Planned features'.t -%></p>
+    </div>
+    <div class='channel-body-outer'>
+      <div class='inner'>
+        <%= render_component(:controller => 'wiki',
+                             :action =>  'show',
+                             :params => { :page_name => 'NextRelease',
+                                          :context => 'partial',
+                                          :locale => @locale }) %>
+      </div>
+    </div>
+  </div>
     
