User signing up added
Still need work on password confirmation checking as well as
blocking existing usernames. It probably already works, but the
tests still need to be written.

I also want to come up with a nice ajaxied user interface for the
error reporting.

--- pt-br -----------------------

Adicionado registro de usuarios on-line

Ainda eh preciso trabalhar na checacgem de confirmacao de senhas
e em bloquear usuarios jah existentes. Provavelmente isso jah
funciona, mas eh preciso escrever os testes.

Tambem quero inventar uma boa interface com AJAX para os erros de
autenticacao.

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@330 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/layouts/_header.rhtml
+++ b/app/views/layouts/_header.rhtml
@@ -20,16 +20,14 @@
           </tr>
           <tr>
             <td>
-            <input type="text" name="user_login" id="user_login"
-                   size="12" value="" />
+              <%= text_field 'user', 'login', :size => 12 -%>
             </td>
             <td>
-              <input type="password" name="user_password" id="user_password"
-                     size="12" />
+              <%= password_field 'user', 'password', :size => 12 -%>
             </td>
             <td class="password_confirm" style="display: none">
-              <input type="password" name="user_password_confirmation"
-                     id="user_password_confirmation" size="12" disabled="true"/>
+              <%= password_field 'user', 'password_confirmation', :size => 12,
+                                 :disabled => true -%>
             </td>
             <td>
               <input type='hidden' name='return_to' value="<%= url_for(params) -%>"/>
