Error message for username unavailable
Thins are still pretty ugly. I need to study error reporting
on Rails and add some JavaScript black magic.

--- pt-br ----------------

Mensagem de erro para nome de usuario indisponivel

As coisas ainda estao meio feias. Preciso estudar apresentacao
de erros com Rails e colocar um pouco de magia negra com
JavaScript.

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@332 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/layouts/_header.rhtml
+++ b/app/views/layouts/_header.rhtml
@@ -2,8 +2,13 @@
     <%= link_to 'English', params.merge(:locale => 'en'), { :id => 'en' } -%>
   | <%= link_to 'Português', params.merge(:locale => 'pt-BR'), { :id => 'pt-BR' } -%>
 </div>
-<div>
+<div style="position: relative">
   <% if current_user.nil? then %>
+      <%   login_style = nil %>
+      <% if flash[:username_used] %>
+      <%   login_style = 'border: 2px solid #FAA' %>
+        <span style="border: 1px solid #F33; background: #FFA; position: absolute; top: 10px; left: 64px; padding: 0 3px 0 3px">Username unavailable</span>
+      <% end %>
       <%= start_form_tag :controller => 'account', :action=> 'login' %>
         <table>
           <tr>
@@ -20,7 +25,9 @@
           </tr>
           <tr>
             <td>
-              <%= text_field 'user', 'login', :size => 12 -%>
+              <%= text_field 'user', 'login', :size => 12,
+                                              :style => login_style,
+                                              :value => flash[:username_used] -%>
             </td>
             <td>
               <%= password_field 'user', 'password', :size => 12 -%>
