--- a/app/views/layouts/_top.rhtml
+++ b/app/views/layouts/_top.rhtml
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title><%= @title -%></title>
     <%= stylesheet_link_tag "motiro", :media => "all" %>
+    <%= javascript_include_tag :defaults %>
     <script type="text/javascript" src="/javascripts/motiro.js"></script>
     <script type="text/javascript" src="/niftycube.js"></script>
     <script type="text/javascript">
