Small modifications to authentication error reporting
* Top left language links were not reachable
* Diminished network usage on asynchronous request by moving tooltip positioning to CSS stylesheet
* Error message for username not available translated

--- pt-br -----------------

Pequenas modificacoes na apresentacao de erros de autenticacao

* Links de traducao no canto superior esquerdo nao estavam alcancaveis
* Uso de rede com requisicao assincrona diminuido com a mudanca do posicionamento da tooltip para a folha de estilos CSS
* Mensagem de erro para nome de usuario nao disponivel traduzida


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@334 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/layouts/_auth_errors.rhtml
+++ b/app/views/layouts/_auth_errors.rhtml
@@ -1,3 +1,3 @@
 <% if @not_available %>
-  <span id="username_not_available" style="border: 1px solid #F33; background: #FFA; position: absolute; top: 10px; left: 64px; padding: 0 3px 0 3px">Not available</span>
+  <span id="username_not_available"><%= 'Not available'.t -%></span>
 <% end %>
