--- a/app/views/layouts/_top.rhtml
+++ b/app/views/layouts/_top.rhtml
@@ -21,6 +21,6 @@
       <% if @flash[:notice] -%>
         <div id="notice"><%= @flash[:notice] %></div>
       <% end %>
-      <div id='header'>
+      <div id="header" style="position: relative">
         <%= render :partial => 'layouts/header' %>
       </div>
