Not available message no longer shown when just logging in
--- pt-br --------------------

Mensagem de insdisponibilidade nao mais mostrada na hora de logar


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@336 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/account/authorization.rhtml
+++ b/app/views/account/authorization.rhtml
@@ -37,8 +37,7 @@
       </tr>
     </table>
     <%= observe_field 'user_login',
-                      :url => { :controller => 'account',
-                                :action => 'availability' },
+                      :function => "if (document.getElementById('chk_new_user').checked) { new Ajax.Updater('authentication_errors', '/account/availability', {asynchronous:true, evalScripts:true, parameters:'desired_login=' + value})}",
                       :with => 'desired_login',
                       :frequency => 1,
                       :update => 'authentication_errors' %>
