--- a/app/views/account/availability.rhtml
+++ b/app/views/account/availability.rhtml
@@ -1,3 +1,3 @@
 <% if @not_available %>
-  <span id="username_not_available"><%= 'Not available'.t -%></span>
+  <span class="warning" id="username_not_available"><%= 'Not available'.t -%></span>
 <% end %>
