--- a/app/views/layouts/_top.rhtml
+++ b/app/views/layouts/_top.rhtml
@@ -6,7 +6,7 @@
     <title><%= @title -%></title>
     <%= stylesheet_link_tag "motiro", :media => "all" %>
     <%= javascript_include_tag :defaults %>
-    <script type="text/javascript" src="/javascripts/motiro.js"></script>
+    <%= javascript_include_tag 'motiro' %>
     <script type="text/javascript" src="/niftycube.js"></script>
     <script type="text/javascript">
         window.onload=function(){
