Fixed checkbox border on IE
--- pt-br ---------------

Consertada borda da checkbox no IE


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@338 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/account/authorization.rhtml
+++ b/app/views/account/authorization.rhtml
@@ -15,7 +15,8 @@
           <label for="user_password_confirmation"><%= 'Confirmation'.t -%></label>
         </td>
         <td>
-          <input type="checkbox" id="chk_new_user" name="chk_new_user"
+          <input type="checkbox" id="chk_new_user"
+                 name="chk_new_user" class="checkbox"
                  onClick="tooglePasswordConfirmation(document.forms[0].chk_new_user.checked)" />
             <%= 'New user?'.t -%>
         </td>
