--- a/app/views/report/show.rhtml
+++ b/app/views/report/show.rhtml
@@ -1,9 +1,8 @@
 <div class='channel-title'>
   <%= link_to( image_tag('rss.png', :border => 0, :class => 'rss'),
                { :controller => 'report',
-                 :action => 'show',
+                 :action => 'rss',
                  :reporter => @name,
-                 :format => 'rss',
                  :locale => @locale },
                :class => 'feed' )
   %>
