Internet Explorer blinking fixed
It looks like a hack, it feels like a hack,
it ''is'' a hack.

--- pt-br -------------

Piscada do Internet Explorer consertada

Parece uma gambiarra, eh feio como uma gambiarra,
''eh'' uma gambiarra.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@352 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -196,10 +196,12 @@ span.warning {
 	position: absolute;
 	top: 12px;
 	left: 64px;
+	z-index: 6;
 }
 
 #passwords_do_not_match {
 	position: absolute;
 	top: 12px;
 	left: 174px;
+	z-index: 6;
 }
