--- a/app/views/account/availability.rhtml
+++ b/app/views/account/availability.rhtml
@@ -1,3 +1,5 @@
 <% if @not_available %>
   <span class="warning" id="username_not_available"><%= 'Not available'.t -%></span>
+<% else %>
+  <span style="position: absolute" />
 <% end %>
