--- a/app/views/layouts/_top.rhtml
+++ b/app/views/layouts/_top.rhtml
@@ -7,7 +7,9 @@
     <%= stylesheet_link_tag "motiro", :media => "all" %>
     <%= javascript_include_tag :defaults %>
     <%= javascript_include_tag 'motiro' %>
-    <script type="text/javascript" src="/niftycube.js"></script>
+    <script src="<%= url_for :controller => 'javascript',
+                             :action => 'niftycube' -%>"
+            type="text/javascript"></script>
     <script type="text/javascript">
         window.onload=function(){
             Nifty("div.channel-title","top,big");
