Username availability and signing up working on subdir
--- pt-br -------------------

Disponibilidade de nomes e registro funcionando em subdir


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@373 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/account/authorization.rhtml
+++ b/app/views/account/authorization.rhtml
@@ -41,7 +41,7 @@
       </tr>
     </table>
     <%= observe_field 'user_login',
-                      :function => "if (document.getElementById('chk_new_user').checked) { new Ajax.Updater('authentication_errors', '/account/availability', {asynchronous:true, evalScripts:true, parameters:'desired_login=' + value})}",
+                      :function => "if (document.getElementById('chk_new_user').checked) { new Ajax.Updater('authentication_errors', '#{url_for :controller => 'account', :action => 'availability'}', {asynchronous:true, evalScripts:true, parameters:'desired_login=' + value})}",
                       :with => 'desired_login',
                       :frequency => 1,
                       :update => 'authentication_errors' %>
