First solution for showing older revisions
Still lacks:

* Testing
* Refactoring
* Pagination

--- pt-br ------------------

Primeira solucao para mostrar revisoes antigas

Ainda precisa de:

* Testes
* Refatoracao
* Paginacao


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@391 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/list.rhtml
+++ b/app/views/report/list.rhtml
@@ -10,7 +10,7 @@
 </div>
 <div class='channel-body-outer'>
   <div class='inner'>
-  <% if ! @toolbar.nil?  then %>
+  <% if @toolbar then %>
     <div class='toolbar channel_toolbar'>
       <%= render :partial => @toolbar -%>
     </div> 
