--- a/app/views/report/list.rhtml
+++ b/app/views/report/list.rhtml
@@ -10,9 +10,9 @@
 </div>
 <div class='channel-body-outer'>
   <div class='inner'>
-  <% if @toolbar then %>
+  <% if ! @toolbar_buttons.empty? then %>
     <div class='toolbar channel_toolbar'>
-      <%= render :partial => @toolbar -%>
+      <%= @toolbar_buttons.map { |b| instance_eval(b) }. join(' | ') -%>
     </div> 
   <% end %>
 <% @headlines.each do |headline|%>
