Translates table header on older headlines page
--- pt-br ------

Traduz o cabecalho da tabela na pagina de manchetes antigas


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@407 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/older.rhtml
+++ b/app/views/report/older.rhtml
@@ -4,10 +4,10 @@
           <table class="oldernews">
             <thead>
              <tr>
-                <th class="date">Data</th>
+                <th class="date"><%= 'Date'.t -%></th>
                 <th class="relative"/>
-                <th>Autor</th>
-                <th>Título</th>
+                <th><%= 'Author'.t -%></th>
+                <th><%= 'Title'.t -%></th>
               </tr>
             </thead>
             <tbody>
