Repositions and changes colors for elements on the front page
* All channels are now blue
* The main page text no longer has a tick round border, now uses a thin one
* Background is gray almost white
* Visited and non-visited link colors changed
* Uses the whole screen

--- pt-br -------------

Reposiciona e muda cores dos elementos da pagina principal

* Todos os canais agora sÃ£o azuis
* O texto da pÃ¡ina principal nÃ£o tem mais uma borda grossa e redonda, mas uma fininha
* A cor de fundo agora Ã© cinza quase branco
* Cor dos links visitados e nÃ£o-visitados modificada
* Usa a janela inteira


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@408 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -1,13 +1,5 @@
 <% @title = "Motiro: #{'Welcome'.t}" %>
-      <div id="description" class="window">
-        <div class = "inner">
-          <%= render_component(:controller => 'wiki',
-                               :action =>  'show',
-                               :params => { :page_name => 'MainPage',
-                                            :context => 'partial',
-                                            :locale => @locale }) %>
-        </div>
-      </div>
+  <div id="rightside">
   <% ReporterFetcher.new.active_reporters.each do |reporter| %>
     <div class="channel" id="<%= reporter.name -%>">
       <%= render_component(:controller => 'report',
@@ -29,5 +21,13 @@
                                           :locale => @locale }) %>
       </div>
     </div>
+  </div>
+  </div>
+  <div id="description">
+    <%= render_component(:controller => 'wiki',
+                         :action =>  'show',
+                         :params => { :page_name => 'MainPage',
+                                      :context => 'partial',
+                                      :locale => @locale }) %>
   </div>
     
