--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -22,13 +22,18 @@ body {
     display: none;
 }
 
+#header {
+    margin: 0 332px 0 0;
+    padding: 0;
+}
+
 #rightside {
     float: right;
 }
 
 #description {
     background-color: #FFF;
-    margin: 4px 4px 4px 4px;
+    margin: 4px 332px 4px 4px;
     padding: 0 .8em .4em .8em;
     border: 1px solid #679cd2;
     margin-right: 332px;
