--- a/app/views/layouts/_top.rhtml
+++ b/app/views/layouts/_top.rhtml
@@ -20,6 +20,6 @@
       <% if @flash[:notice] -%>
         <div id="notice"><%= @flash[:notice] %></div>
       <% end %>
-      <div id="header" style="position: relative">
+      <div id="header">
         <%= render :partial => 'layouts/header' %>
       </div>
