Right-aligns language menu again
--- pt-br -------------

Alinha menu de idiomas aa direita novamente


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@414 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -23,7 +23,7 @@ body {
 }
 
 #header {
-    margin: 0 332px 0 0;
+    margin: 0;
     padding: 0;
     position: relative;
     height: 3em;
@@ -43,7 +43,6 @@ div.authorization_cell {
     margin: 4px 332px 4px 0;
     padding: 0 .8em .4em .8em;
     border: 1px solid #679cd2;
-    margin-right: 332px;
 }
 
 div.channel {
