Uses thin border on detail pages and stretches the box
--- pt-br -------------

Usa borda fina nas paginas de detalhamento e estica a caixa


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@415 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/events_detail.rhtml
+++ b/app/views/report/events_detail.rhtml
@@ -1,14 +1,12 @@
 <% @title = "Motiro - #{'Event'.t}" %>
 <% if ! @partial then %>
-      <div id="description" class="window">
-        <div class="inner">
-          <h1><%= h(@headline.title(Translator.for(@locale))) -%></h1>
+    <div class="pagetext">
+      <h1><%= h(@headline.title(Translator.for(@locale))) -%></h1>
 <% end %>
 <%= Page.new(:text => @headline.description(Translator.for(@locale))).
       render_html %>
 <% if ! @partial then %>
-        </div>
-      </div>
+    </div>
 <% end %>
 
     
