--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -23,7 +23,7 @@
 	  </div>
 	</div>
   </div>
-  <div id="description">
+  <div id="mainpage" class="pagetext">
     <%= render_component(:controller => 'wiki',
                          :action =>  'show',
                          :params => { :page_name => 'MainPage',
