--- a/app/views/report/darcs_detail.rhtml
+++ b/app/views/report/darcs_detail.rhtml
@@ -1,8 +1,7 @@
 <% @title = 'Motiro - Darcs Patch' %>
 <% if ! @partial then %>
-      <div id="description" class="window">
-        <div class="inner">
-          <h1>Darcs patch</h1>
+    <div class="pagetext">
+      <h1>Darcs patch</h1>
 <% end %>
 <%= Page.new(:text => @headline.description(Translator.for(@locale))).
       render_html %>
@@ -13,12 +12,11 @@
             <% end %>
           </div>
 <% if !@partial then %>
-        </div>
-      </div>
     </div>
     <div id="changes">
       <% @headline.changes.each do |change| %>
         <%= change.render_diff %>
       <% end %>
+    </div>
 <% end %>
   
