Thin border for wiki pages
--- pt-br --------------

Borda fina para paginas wiki


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@417 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/layouts/wiki_show.rhtml
+++ b/app/views/layouts/wiki_show.rhtml
@@ -1,7 +1,5 @@
 <%= render :partial => 'layouts/top' %>
-  <div class="window">
-    <div class="inner">
-      <%= @content_for_layout %>
-    </div>
+  <div class="pagetext">
+    <%= @content_for_layout %>
   </div>
 <%= render :partial => 'layouts/bottom' %>
