Changes wiki edit screen style
--- pt-br --------------

Modifica o estilo da tela de edicao wiki


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@421 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -76,7 +76,7 @@ a.feed {
 div.window {
     background-color: #a0ccee;
     padding: 8px 8px 8px 8px;
-    margin: 8px 4px 8px 4px;
+    margin: 0 0 .48em 0;
 }
 
 div.inner {
@@ -182,13 +182,17 @@ input.checkbox {
    border: none;
 }
 
-#editor input.text {
-    width: 100%;
+input#txtTitle {
+    font-size: x-large;
 }
 
 textarea {
     border: solid 1px #80aacc;
     width: 100%;
+}
+
+div#editor div.inner {
+    background-color: #fff; 
 }
 
 #footer {
