Adds wiki/new screen (for features)
It doesn't work yet and is mostly a copy from wiki/edit.
When it gets ready, it will take its place.

--- pt-br --------------

Adiciona a tela wiki/new (para sugestao de recursos)

Nao funciona ainda e eh basicamente uma copia de wiki/edit.
Quando ficar pronta, vai substitui-la


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@422 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -184,6 +184,9 @@ input.checkbox {
 
 input#txtTitle {
     font-size: x-large;
+    font-family: courier;
+    margin-top: .2em;
+    margin-bottom: .4em;
 }
 
 textarea {
@@ -192,7 +195,22 @@ textarea {
 }
 
 div#editor div.inner {
-    background-color: #fff; 
+    background-color: #e8f2f2; 
+}
+
+div#page_properties {
+    margin: 0;
+    margin-right: 20.2em;
+}
+
+div#wiki_reference {
+    margin: 0;
+    float: right;
+    width: 18.4em;
+}
+
+div#page_properties div.inner {
+    background-color: #e8f2f2; 
 }
 
 #footer {
